--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Home</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newsletter | Stay Updated</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+        }
+    </style>
 </head>
-
 <body>
-    <p>Welcome to our newsletter!</p>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
 </body>
-
 </html>
